# rag_inference_example

./: .gitignore  README.md  architecture.md  docker-compose.yml  manual_test.md  pyproject.toml  run_tests.sh  test_pipeline.py
artemis_chat_email/: __init__.py  config.py  consumer.py  http_client.py  logger.py  main.py
artemis_indexer/: Dockerfile  __init__.py  config.py  consumer.py  http_client.py  logger.py  main.py
file_service/: .dockerignore  Dockerfile  __init__.py  config.py  file_reader.py  logger.py  main.py
indexer_service/: Dockerfile  __init__.py  config.py  embeddings_stub.py  indexer.py  indexer_service_module.py  logger.py  main.py
indexer_service/clients/: __init__.py  file_service_internal.py  opensearch.py  translator_service_internal.py
indexer_stub/: Dockerfile  __init__.py  artemis_producer.py  config.py  embeddings_stub.py  file_client.py  indexer.py  indexer_service.py  logger.py  opensearch_client.py
rag_service/: Dockerfile  __init__.py  config.py  logger.py  main.py  tasks.py  vector_search.py  worker.py
rag_service/clients/: opensearch.py  redis.py  translator_service_internal.py
rag_stub/: Dockerfile  __init__.py  artemis_producer.py  config.py  logger.py  main.py  opensearch_client.py  redis_client.py  tasks.py  vector_search.py  worker.py
storage/: a.txt  b.txt
translator_service/: Dockerfile  __init__.py  config.py  logger.py  logic.py  main.py  redis_client.py  router.py
translator_service/clients/: artemis_consumer.py  artemis_producer.py  indexer_service_internal.py  redis.py
