[project]
name = "rag-stend-tests"
version = "0.1.0"
description = "Test pipeline for RAG infrastructure"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-qpid-proton>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
